src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
.container {
  display: flex;
  border-radius: 4px;
  box-shadow: 0 19px 38px rgba(0,0,0,0.3), 0 15px 12px rgba(0,0,0,0.22);
  flex-direction: column;
  width: 640px;
  height: 720px;
  background: white;
  font-family: "Roboto", serif;

  .title {
    background: #FFFCAB;
    padding: 45px 25px;
    font-size: 20px;
    font-weight: 500;
    color: rgba(0, 0, 0, 0.87);
    border-radius: 4px 4px 0 0;
  }

  .body {
    text-align: justify;
    overflow: auto;
    height: 480px;
    padding: 25px 45px;
    font-size: 13px;
    line-height: 16px;
    color: rgba(0, 0, 0, 0.54);
  }

  .actions {
    display: flex;
    margin: auto 25px 25px 25px;
    align-items: center;
    color: #2C98F0;

    button {
      text-transform: uppercase;
      font-size: 14px;
    }

    .accept {
      color: white;
      background: #2C98F0;
    }

    .logout {
      margin-left: auto;
      margin-right: 30px;
    }

    .disabled {
      background: rgba(0, 0, 0, 0.26);
    }
  }

  simple-dropdown {
    font-size: 13px;
  }

  mat-spinner {
    margin: auto;
  }
}

